arma-rs/tests/derive/fail_struct_tuple_transparent.stderr
error: #[arma(transparent)] cannot be used on tuple like structs
 --> tests/derive/fail_struct_tuple_transparent.rs:4:8
  |
4 | #[arma(transparent)]
  |        ^^^^^^^^^^^
